# yolos-face-detection

./: .gitignore  README.md  pyproject.toml
src/yolos_face/: dataset.py
